# WeatherWebApp

./: .gitignore
backend/: dump.rdb  pyproject.toml
backend/api/: views.py
backend/api/clients/: openweather.py
backend/authentication/: views.py
backend/authentication/templates/auth/: login.html  register.html
backend/backend/: settings.py  urls.py
backend/cities/: admin.py  ai_generator.py  models.py  serializers.py  urls.py  views.py
backend/cities/migrations/: 0001_initial.py  0002_profile.py  0003_city_description_city_updated_at_city_what_to_wear_and_more.py
backend/cities/templates/cities/: city_detail.html  city_list.html  geolocation.html  weather.html  weather_of_detected.html
backend/static/: main.js  styles.css
backend/templates/: base.html
